--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
         
 <section>
-    <div id="menuContent" class="absolute top-9 inline-flex left-0 gap-2 rounded-md border-black border-2 bg-black text-white px-2 ">
+    <div id="menuContent" class="absolute top-9 sm:text-sm inline-flex left-0 gap-2 rounded-md border-black border-2 bg-black text-white px-2 ">
         <ul class="hover:animate-bounce duration-100   cursor-pointer hover:text-white p-0 hover:rounded-md hover:px-2 hover:font-semibold"><a  href="#card1" class="">⬆️Top</a></ul>
         <ul class="hover:animate-bounce duration-100 cursor-pointer hover:text-white p-0 hover:rounded-md hover:px-2 hover:font-semibold"><a  href="#rate" class="">⭐Rate Us</a></ul>
         <ul class="hover:animate-bounce duration-100 cursor-pointer hover:text-white p-0 hover:rounded-md hover:px-2 hover:font-semibold"><a  href="#contact" class="">📞Contact</a></ul>
