--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         
 <section>
     <div id="menuContent" class="absolute top-9 text-sm inline-flex left-0 gap-2 rounded-md border-black border-2 bg-black text-white px-2 ">
-        <ul class="hover:animate-bounce duration-100   cursor-pointer hover:text-white p-0 hover:rounded-md hover:px-2 hover:font-semibold"><a  href="#card1" class="">⬆️Top</a></ul>
-        <ul class="hover:animate-bounce duration-100 cursor-pointer hover:text-white p-0 hover:rounded-md hover:px-2 hover:font-semibold"><a  href="#rate" class="">⭐Rate Us</a></ul>
-        <ul class="hover:animate-bounce duration-100 cursor-pointer hover:text-white p-0 hover:rounded-md hover:px-2 hover:font-semibold"><a  href="#contact" class="">📞Contact</a></ul>
-        <ul id="sellLink" class="hover:animate-bounce duration-100 cursor-pointer hover:text-white p-0 hover:rounded-md hover:px-2 hover:font-semibold"><a target="_blank"   href="/main/sell.html" class="">💵Sell</a></ul>
-        <ul id="sellLink" class="hover:animate-bounce duration-100 cursor-pointer hover:text-white p-0 hover:rounded-md hover:px-2 hover:font-semibold"><a target="_blank"   href="/main/myCarts.html" class="">🛒My Carts</a></ul>
+        <ul class="hover:animate-bounce duration-100 text-sm   cursor-pointer hover:text-white p-0 hover:rounded-md hover:px-2 hover:font-semibold"><a  href="#card1" class="">⬆️Top</a></ul>
+        <ul class="hover:animate-bounce duration-100 text-sm  cursor-pointer hover:text-white p-0 hover:rounded-md hover:px-2 hover:font-semibold"><a  href="#rate" class="">⭐Rate Us</a></ul>
+        <ul class="hover:animate-bounce duration-100 text-sm  cursor-pointer hover:text-white p-0 hover:rounded-md hover:px-2 hover:font-semibold"><a  href="#contact" class="">📞Contact</a></ul>
+        <ul id="sellLink" class="hover:animate-bounce text-sm  duration-100 cursor-pointer hover:text-white p-0 hover:rounded-md hover:px-2 hover:font-semibold"><a target="_blank"   href="/main/sell.html" class="">💵Sell</a></ul>
+        <ul id="sellLink" class="hover:animate-bounce text-sm  duration-100 cursor-pointer hover:text-white p-0 hover:rounded-md hover:px-2 hover:font-semibold"><a target="_blank"   href="/main/myCarts.html" class="">🛒My Carts</a></ul>
     </div>
 </section>
 <hr class="border-2 border-black">
